# adelic-spectral-zeta

./: .gitignore  BENCHMARKS.md  CLAIMS.md  Dockerfile  LICENSE  README.md  SEASON_2_BATTLE_PLAN.md  adelic_qasper.jsonl  apply_docstrings.py  arxiv_adelic.json  arxiv_prime.json  arxiv_res_2.json  arxiv_search_1.json  arxiv_search_2.json  arxiv_threshold.json  battle_plan.txt  benchmark_results.csv  build_mathlib_spectral.py  build_notebook.py  check.py  check_dynamic_L.py  check_main.py  clean_bom.py  cleanup_experiments.py  codemeta.json  collatz_renorm.py  create_notebooks.py  current.lean  environment.yml  extract.py  extract_model.py  fa.py  find_trace_elements.py  fix6_deps.py  fix_c_last.py  fix_imports.py  fix_schreier_spectral.py  fix_schreier_spectral2.py  fix_scripts.py  fix_tests.py  (+59 more)
coq/: BassIhara.v  _CoqProject
data/: a5_hecke_traces.json  artin_800_ap.json  expander_parameter_sweep.csv  high_res_asymptotics.csv  lmfdb_a5_newforms.json  optimization_telemetry.csv  phase2_regularization.txt  phase3_telemetry.txt
docs/: Adelic_Topology_Report.md  CONJECTURES.md  adelic_literature_review.md  collatz_gauge_geometry.md  collatz_spectral_bridge_status.md  collatz_spectral_gap.md  collatz_spectral_paper.tex  commutator_rank_kernel_note.md  eigenvector_alignment_note.md  file_linkage_map.html  file_linkage_map_v3.html  geometric_index_theorem.md  github_math_syntax_guide.md  hecke_operator_blueprint.md  mathlib_limitations.md  schreier_random_walk_note.md  schreier_spectral_decomposition_paper.md  unified_monograph.md  v3_systems_implementation.md
experiments/: META_SHITPOST.md  aps_spectral_flow_model.py  artin_spectral_triple.py  audit_gl2_orbital_integrals.py  audit_sobolev_energy.py  automorphic_delta_triple.py  axiom_summability_check.py  axiom_verification_explicit.py  benchmark_eaas.py  benchmark_jax.py  benchmark_serving.py  benchmark_triton.py  benchmark_v2.py  bruhat_tits_energy_divergence.py  brute_force_test_vector.py  check_W.py  check_antisym_eig.py  check_cos_sum.py  check_eig.py  check_lambda2.py  check_large_d.py  check_rayleigh_collapse.py  chern_simons_statistics.py  colab_adelic_condensation.py  colab_dimension_spectrum.py  colab_finetune_adelic.py  colab_longbench_qwen.ipynb  colab_multimodal_surgery.py  colab_push_hf_poc.py  colab_qat_4bit_surgery.py  colab_qat_ternary_surgery.py  colab_sparse_solver.py  colab_tpu_adelic_annealer.ipynb  colab_tpu_adelic_annealer.py  colab_tpu_coherent_qec.ipynb  colab_tpu_coherent_qec.py  collatz_dynamics.py  collatz_gauge_sweep.py  compare_eigenvectors.py  compare_monna_opt.py  (+128 more)
formalization/: Formalization.lean  Scratch.lean  SpectralPositivity.lean  append_tau.py  charpoly.py  charpoly_results.txt  check.lean  check_bass.py  check_bernoulli.lean  check_deriv.lean  check_lemmas.lean  check_sym_anti.py  check_weights.py  check_weights_2.py  compute_antisym.lean  compute_recursion.lean  compute_traces.py  debug.lean  final_test.lean  final_test2.lean  fix.py  fix2.py  fix3.py  fix_charpoly.lean  generated_tau.lean  (+160 more)
(+451 files in other folders)
