[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama-surgery"
version = "1.0.0"
description = "Hardware-accelerated, differentiable block-sparse routing for Llama via Continuous Logit Homotopy."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "CC-BY-4.0" }
authors = [
    { name = "Antigravity & The User" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.6.0",
    "mpmath>=1.2.0",
    "matplotlib>=3.3.0",
    "tqdm>=4.67.3",
    "biopython>=1.85",
]

[project.urls]
Homepage = "https://github.com/user/adelic_spectral_zeta"
