[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama-surgery"
version = "1.1.0"
description = "Hardware-accelerated, differentiable block-sparse routing for Llama via Continuous Logit Homotopy."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "CC-BY-4.0" }
authors = [
    { name = "Antigravity & The User" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "triton>=2.1.0; platform_system != 'Windows'",
    "numpy>=1.20.0",
    "pillow>=9.0.0",
    "requests>=2.25.0",
    "huggingface_hub>=0.19.0",
]

[project.scripts]
llama-multimodal-injector = "llama_surgery.multimodal_injector:main"

[project.urls]
Homepage = "https://github.com/user/adelic_spectral_zeta"

[tool.hatch.build]
include = [
  "/src/llama_surgery",
  "/README.md",
  "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llama_surgery"]
